[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/enemies/bullet_turret.png" type="Texture" id=1]
[ext_resource path="res://scenes/TurretBullet.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 8.06226

[node name="TurretBullet" type="KinematicBody2D"]
rotation = -1.57079
collision_layer = 262144
collision_mask = 131072
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="TurretBulletShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DissapearTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0 )

[connection signal="timeout" from="DissapearTimer" to="." method="_on_DissapearTimer_timeout"]
